# tiny_corpus_prep

./: .gitignore  INSTALL.md  QUICKSTART.md  README.md  demo_notebook.ipynb  install.sh  pyproject.toml  requirements.txt
cefr_synonyms/: build_stats.txt
examples/: basic_usage.py  cefr_synonym_example.py  gemini_example.py
tiny_corpus_prep/: __init__.py  annotators.py  common.py  filters.py  io.py  normalize.py  pipeline.py  synonyms.py
